# tt-bot-deploy

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-11-signing-and-self-updater.md
docs/superpowers/specs/: 2026-07-11-signing-and-self-updater-design.md
scripts/: build.sh  setup.ps1  setup.sh
src/: config.rs  error.rs  i18n.rs  lib.rs  logging.rs  main.rs  player.rs  service.rs  services.rs  settings.rs  track.rs  wizard.rs
src/audio/: mod.rs  pipeline.rs  volume.rs
src/bot/: auth.rs  commands.rs  mod.rs  runner.rs  state.rs
src/gui/: autostart.rs  config_dialog.rs  icon.rs  manager.rs  mod.rs  progress.rs  settings_dialog.rs  tray.rs  update_dialog.rs
src/i18n/: en.lang  es.lang  pt.lang  ru.lang
src/spotify/: auth.rs  metadata.rs  mod.rs  player.rs  recovery.rs  sink.rs  types.rs
src/tt/: audio_inject.rs  connection.rs  mod.rs  sdk.rs
src/update/: apply.rs  github.rs  mod.rs  verify.rs
src/youtube/: metadata.rs  mod.rs  player.rs  setup.rs  types.rs
